--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -92,7 +92,7 @@ body
       #description-tag
         display: flex
         flex-direction: column
-        width: 75%
+        width: 73%
         
         
         #description-background
@@ -153,8 +153,9 @@ body
   flex-direction: row
   justify-content: space-between
   width: 100%
-  height: 100vw
+  //height: 100vw
   //background-color: purple
+  margin-bottom: 5vw
 
   #left-pane
     display: flex
@@ -258,32 +259,123 @@ body
         font-size: 1.3vw
         border: none
         background-color: transparent
-        
-    .page
-      margin: 0 1.5vw 1.5vw 1.5vw
+    
+    .page-panel
       display: flex
       flex-direction: column
       flex-wrap: nowrap
       justify-content: flex-start
-      align-items: center
+      //background-color: red
       
-    .card-panel
-      width: 95%
-      //height: 20vw
-      margin-bottom: 1vw
-      padding: 1vw
-      background-color: white
-      border-radius: 1vw
-      
-      .panel-img
-        width: 10vw
-        padding-top: 10vw
-        background-color: red
+      .card
+        display: flex
+        flex-direction: row
+        justify-content: space-around
+        align-items: flex-start
+        background-color: white
+        margin: 0 2vw 1vw 2vw
+        padding: 1.5vw
+        border-radius: 1vw
+        border: solid 2px
+        border-color: #75E1C7
         
-      p
-        position: relative
-        left: 50%
-
+      .cardleft
+        display: flex
+        flex-direction: column
+        flex-wrap: nowrap
+        align-items: center
+        .card-img
+          width: 12vw
+          height: 12vw
+          border: solid 2px
+          border-color: #75E1C7
+          border-radius: 1vw
+          background-color: #FFE4DC
+        #activity-date
+          font-size: 0.85vw
+          color: gray
+          margin-top: 1.5vw
+          
+      
+      .cardright
+        display: flex
+        flex-direction: column
+        flex-wrap: nowrap
+        justify-content: flex-start
+        align-items: flex-start
+        width: 20vw
+        //background-color: yellow
+        #info
+          display: flex
+          flex-direction: row
+          flex-wrap: nowrap
+          justify-content: flex-start
+          align-items: center
+          .cardinfott
+            font-size: 1.6vw
+          .rate
+            font-size: 1vw
+            line-height: 1.5vw
+            margin-left: 1.5vw
+            //background-color: #75E1C7
+            padding: 0 0.5vw
+            border-radius: 0.7vw
+            border: solid 2px
+            border-color: #75E1C7
+          .charname
+            font-size: 1vw
+            line-height: 1.5vw
+            margin-left: 1vw
+            background-color: #75E1C7
+            padding: 0 0.5vw
+            border-radius: 0.7vw
+            
+        .comments
+          display: flex
+          flex-direction: column
+          flex-wrap: nowrap
+          align-content: flex-start
+          justify-content: flex-start
+          align-items: flex-start
+          width: 100%
+          
+          .activity-comment
+            display: flex
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+            align-content: flex-start;
+            align-items: center
+            
+            #participant-img
+              width: 2.5vw
+              height: 2.5vw
+              border-radius: 50%
+            .comment-right
+              background-color: #EFFFFB
+              padding: 0.2vw 0.5vw 0.2vw 0.5vw
+              border-radius: 1vw
+              margin-top: 0.5vw
+              width: 15.5vw
+              margin-left: 0.5vw
+              //background-color: white
+              
+              #participant-name
+                font-size: 1vw
+                text-align: left
+              #participant-comment
+                //background-color: blue
+                font-size: 1vw
+                text-align: left
+              #participant-rate
+                //background-color: green
+                font-size: 1vw
+                text-align: right
+                position: relative
+                right: 0
+                bottom: 0
+                
+    
 //phone responsive
 @media only screen and (max-width: 450px)
   body
