--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -109,39 +109,48 @@ html
             input(type="button", value="...")
             input(type="button", value="...")
 
-          #activities.page
-            #activity-cards
-              {% for activity in activities %}
-              #activity-card.card-panel
-                h4#activity-title {{ activity.title }}
-                #activity-img.panel-img
+          #activities.page-panel
+            {% for activity in activities %}
+            #activity-card.card
+              .cardleft
+                #activity-img.card-img
                 #activity-date {{ actvity.event_date }}
-                {% if activity.comments.count > 0 %}
-                #activity-rate
-                  p {{ activity.get_avg_rating }}
-                {% endif %}
-                #activity-character
-                  p 主辦人
-                
-                #activity-comments-panel
-                  {% for comment in activity.comments.all %}
-                  #activity-comment
-                    img#activity-participant-img(src="{{ commennt.author.img.url }}")
-                    p#activity-participant-name {{ comment.author.full_name }}
-                    p#activity-participant-comment {{ comment.text }}
-                    #pactivity-articipatn-rate
-                      p {{ comment.rate }}
+                  {% for comment in actvity.event_date %}
+                  p {{ actvity.event_date }}
                   {% empty %}
-                  p 這個活動好像還沒有評論
+                  p 未設定日期
+                  {% endfor %}
+              
+              .cardright
+                #info
+                  p#activity-title.cardinfott {{ activity.title }}
+                  {% if activity.comments.count > 0 %}
+                  p#activity-rate.rate {{ activity.get_avg_rating }}★
+                  {% endif %}
+                  p#activity-character.charname 主辦人
+              
+                #activity-comment.comments
+                  {% for comment in activity.comments.all %}
+                  .activity-comment
+                    {% load static %}
+                    img#participant-img(src="{{ comment.author.img.url }}")
+                    .comment-right
+                      p#participant-name {{ comment.author.full_name }}
+                      p#participant-comment {{ comment.text }}
+                      p#participant-rate {{ comment.rate }}★
+                  {% empty %}
+                  .activity-comment
+                    .comment-right
+                      p 這個活動好像還沒有評論
                   {% endfor %}
 
-              {% empty %}
-              p 看來他好像還沒參加過活動喔
-              {% endfor %}
-                
-              // so many comments
+            {% empty %}
+            p 看來他好像還沒參加過活動喔
+            {% endfor %}
+              
+            // so many comments
 
-              // so many cards (use for to solve it after the backend has constructed)
+            // so many cards (use for to solve it after the backend has constructed)
           
           #projects.page(style="display: none")
             #project-cards
