--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -266,7 +266,9 @@ body
       flex-wrap: nowrap
       justify-content: flex-start
       //background-color: red
-      
+      .hint
+        margin-left: 2vw
+        font-size: 1vw
       .card
         display: flex
         flex-direction: row
@@ -291,7 +293,7 @@ body
           border-color: #75E1C7
           border-radius: 1vw
           background-color: #FFE4DC
-        #activity-date
+        .date
           font-size: 0.85vw
           color: gray
           margin-top: 1.5vw
@@ -305,7 +307,7 @@ body
         align-items: flex-start
         width: 20vw
         //background-color: yellow
-        #info
+        .info
           display: flex
           flex-direction: row
           flex-wrap: nowrap
@@ -374,7 +376,10 @@ body
                 position: relative
                 right: 0
                 bottom: 0
-                
+
+#personal-title
+  font-size: 1vw
+  margin-bottom: 1vw
     
 //phone responsive
 @media only screen and (max-width: 450px)
