--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -377,9 +377,15 @@ body
                 right: 0
                 bottom: 0
 
-#personal-title
-  font-size: 1vw
-  margin-bottom: 1vw
+    #personal-title
+      font-size: 1.6vw
+      margin-bottom: 1vw
+    #personal-detail
+      background-color: #EFFFFB
+      padding: 0.2vw 0.5vw 0.2vw 0.5vw
+      border-radius: 1vw
+      width: 15.5vw
+      margin-left: 0.5vw
     
 //phone responsive
 @media only screen and (max-width: 450px)
