--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -21,6 +21,9 @@
   font-family: var(--font-family-text)
   padding: 0
   margin: 0
+  
+input, textarea, button, select, a
+  -webkit-tap-highlight-color: rgba(255, 228 ,220, 0.5)
 
 body
   background-color: #FAAD95
@@ -35,7 +38,7 @@ body
   flex-wrap: wrap
   align-content: space-around
   
-  width: 75%
+  width: 70%
   height: auto
   top: 10%
   left: 50%
@@ -145,7 +148,7 @@ body
   background: rgba(228, 211, 211, 0.36)
   color: #FAFCFD
   cursor: pointer
-  z-index: 1000
+  z-index: 5
   
   
 #filter1
@@ -156,6 +159,7 @@ body
   height: 100vw
   backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
   -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+  z-index: 6
 
 #eventwindow
   //display: none
@@ -383,13 +387,13 @@ body
   transform: translate(-50%, -50%)
   top: 55%
   left: 50%
-  width: 45%
+  width: 40%
   padding: 3% 0
   background-color: #F5FBFE
-  border-radius: 5vw
+  border-radius: 3vw
   border: 5px solid #FFAD94
   box-shadow: 10px 10px 25px 5px #00000026
-  z-index: 2
+  z-index: 7
       
   #exitbtn2
     position: absolute
@@ -407,7 +411,7 @@ body
     height: 4vw
     margin: 0 0 1vw 0
         
-    #pic
+    #user-img
       height: 4vw
       width: 4vw
       border-radius: 2vw
@@ -415,7 +419,7 @@ body
       
     h1
       align-items: center
-      font-size: 3vw
+      font-size: 2.5vw
       line-height: 4vw
       //transform: translate(0, -50%)
       margin-left: 1vw
@@ -424,9 +428,10 @@ body
     display: flex
     flex-direction: column
     align-items: stetch
-    padding-left: 3vw
-    padding-right: 3vw
-    padding-bottom: 3vw
+    padding: 0 3vw 3vw 3vw
+    //padding-left: 3vw
+    //padding-right: 3vw
+    //padding-bottom: 3vw
     label
       display: none
     span
@@ -434,22 +439,22 @@ body
     br
       display: none
     input[type=text]
-      border-radius: 1vw
-      margin-bottom: 1vw
-      height: 3vw
+      border-radius: 2.5vw
+      margin-bottom: 0.7vw
+      height: 2vw
       font-size: 1vw
-      padding: 0 10px
+      padding: 0 1vw
       outline: none
       border: none
       background-color: #EEEEEE
     input[type=text]:focus
       border: 2px solid #B9B9B9
     textarea
-      bordere-radius: 1vw
-      background-color: #EEEEEE
       border-radius: 1vw
-      padding: 1vw 10px
-      margin-bottom: 1vw
+      background-color: #EEEEEE
+      border-radius: 2.5vw
+      margin-bottom: 0.7vw
+      padding: 1vw 1vw
       outline: none
       border: none
       font-size: 1vw
@@ -457,13 +462,17 @@ body
     
     select
       background-color: #EEEEEE
+      color: #666666
       height: 2vw
       font-size: 1vw
       border-radius: 1vw
       outline: none
       border: none
       margin-bottom: 1vw
-      padding: 0 10px
+      padding: 0 1vw
+      
+    #id_image
+      color: #666666
     
     
     // p:nth-child(3)
@@ -554,8 +563,8 @@ body
       height: auto
 
 #filter1
-  display: none
-#eventwindow
   display: block
+#eventwindow
+  display: none
 #eventcreatewindow
   display: block
