homepage no loop

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -103,38 +103,44 @@ body
       width: 15vw
       border-radius: 1.2vw
       background-color: blue
-      z-index: 2
-    #postype
-      
-      #mark
-        margin
-        width: 1.7vw
-        border-radius: 2vw
-        background-color: yellow
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
-        
-        img 
-          width: 17px
-          height: 17px
-      #title
-        font-size: 20px
-      #subtitle
-        font-size: 16px
-      #attachpic
-        img
-          width: 4vw
-          height: 4vw
+      z-index: 1
 
+      #postype
+        height: 13vh
+        width: 15vw
+        border-radius: 1.2vw
+        background-color: green
+        z-index: 2
         
-      #likebutton
-        img
-          width: 20px
-          height: 20px
-        
-      #comment
-        img
-          width: 20px
-          height: 20px
+        #mark
+          margin-left: 12vw
+          margin-top: 1vh
+          width: 1.7vw
+          border-radius: 2vw
+          background-color: yellow
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
+          z-index: 3
+          
+          img 
+            width: 1.5vw
+            height: 1.5vw
+        #title
+          font-size: 1.5vw
+        #subtitle
+          font-size: 1vw
+        #attachpic
+          img
+            width: 4vw
+            height: 4vw
+        #likebutton
+          img
+            width: 20px
+            height: 20px
+          
+        #comment
+          img
+            width: 20px
+            height: 20px
     
         
 
