fix event image not uploadabe problem

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -444,6 +444,8 @@ body
       display: none
     br
       display: none
+    li
+      display: none
     input[type=text]
       border-radius: 2.5vw
       margin-bottom: 0.7vw
