--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -5,13 +5,16 @@ link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
 header
   #navbar 
     #title CONNECT.
+    form
+      input(type="text", name="search")
+    
 
     ul
       li 
-        a.button(href="{{ home_url }}") home
+        
       li 
-        a.button(href="#") activity
+        a.button(href="#")
       li 
-        a.button(href="{{ about_us_url }}") about us
+        a.button(href="{{ about_us_url }}") us
         
         //a.button(href="javascript:window.location.reload({{ about_us_url }})") about us
