--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -152,6 +152,7 @@ body
   display: flex
   flex-direction: row
   justify-content: space-between
+  align-items: flex-start
   width: 100%
   //height: 100vw
   //background-color: purple
@@ -166,12 +167,17 @@ body
     top: 30%
     left: 20%
     width: 21%
-    height: auto
+    //height: auto
     background-color: white
     border-radius: 1.5vw
     padding: 1.5vw 1vw
     border: solid 2px
     border-color: #FFCFBF
+    
+    p
+      font-size: 2vw
+      padding: 0.2vw
+      
     
     .left-region
       display: flex
@@ -189,11 +195,13 @@ body
       border-radius: 1.5vw
       margin-right: 0.5vw
       margin: 0.2vw
+      padding: 0.3vw
       p
         font-size: 0.8vw
         margin: 0 0.2vw
-        padding: 0.3vw
-        top: 50%
+        //padding: 0.3vw
+        //line-height: 1.4vw
+        align: center
             
     #interest
       .tag-style
@@ -293,6 +301,12 @@ body
           border-color: #75E1C7
           border-radius: 1vw
           background-color: #FFE4DC
+          p
+            width: 12vw
+            text-align: center
+            font-size: 1.5vw
+            color: #666666
+            line-height: 12vw
         .date
           font-size: 0.85vw
           color: gray
@@ -315,23 +329,24 @@ body
           align-items: center
           .cardinfott
             font-size: 1.6vw
+            max-width: 15vw
           .rate
             font-size: 1vw
             line-height: 1.5vw
             margin-left: 1.5vw
             //background-color: #75E1C7
             padding: 0 0.5vw
-            border-radius: 0.7vw
+            border-radius: 1vw
             border: solid 2px
             border-color: #75E1C7
           .charname
             font-size: 1vw
             line-height: 1.5vw
-            margin-left: 1vw
+            margin-left: 0.5vw
             background-color: #75E1C7
-            padding: 0 0.5vw
-            border-radius: 0.7vw
-            
+            padding: 0.2vw 0.5vw
+            border-radius: 1vw
+          
         .comments
           display: flex
           flex-direction: column
@@ -376,15 +391,19 @@ body
                 position: relative
                 right: 0
                 bottom: 0
+              p
+                font-size: 1vw
+                text-align: left
 
     #personal-title
       font-size: 1.6vw
       margin-bottom: 1vw
     #personal-detail
+      font-size: 1.4vw
       background-color: #EFFFFB
       padding: 0.2vw 0.5vw 0.2vw 0.5vw
       border-radius: 1vw
-      width: 15.5vw
+      width: 18vw
       margin-left: 0.5vw
     
 //phone responsive
