--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -26,7 +26,7 @@ input, textarea, button, select, a
   -webkit-tap-highlight-color: rgba(255, 228 ,220, 0.5)
 
 body
-  background-color: #FAAD95
+  background-color: white
 
 #container
   position: fixed
@@ -37,22 +37,24 @@ body
   flex-direction: column
   flex-wrap: wrap
   align-content: space-around
+  ovrer-flow: hidden
   
   width: 70%
   height: auto
   top: 10%
   left: 50%
-  background-color: green
+  bottom: 0%
+  background-color: white
 
   #create
     display: flex
     flex-direction: row
-    justify-content: flex-start;
+    justify-content: flex-start
     align-items: center
-    background-color: red
+    background-color: rgba(255, 219, 208, 1)
     width: 100%
-    height: 7vw
-    border-radius: 2vw
+    height: 12%
+    border-radius: 1.5vw
     margin-bottom: 15px
     
     #userpic
@@ -60,12 +62,13 @@ body
       width: 5vw
       height: 5vw
       border-radius: 2.5vw
-      background-color: yellow
+      background-color: rgba(196, 196, 196, 1)
     #insertbox
-      height: 3.5vw
+      height: 4vh
       width: calc(100% - 13vw)
       border-radius: 1.2vw
-      background-color: yellow
+      background-color: rgba(247, 247, 247, 1)
+      cursor: pointer
       
   #divider
     display: flex
@@ -73,14 +76,14 @@ body
     justify-content: space-between
     align-items: center
     margin: 1vw
-    background-color: purple
+    background-color: rgba(255, 219, 208, 1)
     
     p
       margin-right: 0
       font-size: 1.5vw
     
     .line
-      background-color: #F0F0F0
+      background-color: rgba(255, 219, 208, 1)
       align: center
       height: 0.2vw
       //margin: 0 1vw
@@ -89,58 +92,86 @@ body
       width: 60%
     #line2
       width: 5%
+
   #board
+    display:flex
     flex-direction: row
     justify-content: flex-start
     align-items: center
-    background-color: red
+    background-color: rgba(255, 219, 208, 1)
     width: 100%
-    border-radius: 3vw  
+    height: 85%
+    
+    border-radius: 1.5vw  
     z-index: 0
 
     #postwrapper
-      height: 13vw
-      width: 15vw
-      border-radius: 1.2vw
-      background-color: blue
+      margin-left: 5vw
+      margin-top: 3vh
       z-index: 1
+      height: 15vh
+      width: 30%
+      border-radius: 1.2vw
+      background-color: yellow
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+      cursor: pointer
 
       #postype
-        height: 13vh
-        width: 15vw
+        height: 80%
+        width: 100%
         border-radius: 1.2vw
-        background-color: green
+        background-color: rgba(58, 237, 194, 1)
+        padding-bottom: 20%
+        padding-left: 7%
+        padding-right: 10%
         z-index: 2
         
         #mark
-          margin-left: 12vw
+          transform: translate(+50%, +50%)
+          margin-left: 80%
           margin-top: 1vh
-          width: 1.7vw
-          border-radius: 2vw
-          background-color: yellow
+          margin-bottom: 0.5vh
+          width: 3vw
+          height: 3vw
+          border-radius: 3vw
+          background-color: rgba(255, 134, 96, 1)
           box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
-          z-index: 3
+
+          p
+            font-size: 3vw
+            font-color: rgba(245, 251, 254, 1)
+            position: fixed
+            text-align:center
+            
           
-          img 
-            width: 1.5vw
-            height: 1.5vw
+          
         #title
-          font-size: 1.5vw
+          font-size: 2vw
         #subtitle
-          font-size: 1vw
+          font-size: 1.5vw
+          margin-left: 10%
+          margin-bottom: 1vh
         #attachpic
           img
-            width: 4vw
-            height: 4vw
+            width: 30%
+            height: 30%
+
+      #count
+        display: flex
+        flex-direction: row
+        justify-content: space-evenly
+        padding: 1vw
+
         #likebutton
-          img
-            width: 20px
-            height: 20px
-          
+          transform: translate(+50%, -25%)
+          width: 2.5vw
+          height: 2.5vw
+          vertical-align: middle
         #comment
-          img
-            width: 20px
-            height: 20px
+          transform: translate(+50%, -25%)
+          width: 2.5vw
+          height: 2.5vw
+          vertical-align: middle
     
         
 
@@ -151,8 +182,8 @@ body
   bottom: 30px
   padding: 10px 16px
   font-size: 25px
-  background: rgba(228, 211, 211, 0.36)
-  color: #FAFCFD
+  background: rgba(250, 173, 149, 1)
+  color: rgba(0, 0, 0, 1)
   cursor: pointer
   z-index: 5
   
@@ -162,7 +193,7 @@ body
   top: 0
   left: 0
   width: 100%
-  height: 100vw
+  height: 100%
   backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
   -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
   z-index: 6
@@ -389,6 +420,7 @@ body
       
 #eventcreatewindow
   //display: none
+
   position: fixed
   transform: translate(-50%, -50%)
   top: 55%
