--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -14,42 +14,9 @@ html
 
   body
     #container
-      //-
-        #postcolumn
-          #header
-            img src="./使用者的頭像"
-          button #insert
-          #postform
-            #header
-              img src="./使用者的頭像"
-            #user
-              p #{使用者的姓名}
-            #mypopup(data-role='popup')
-              form(method="post" action="./資料送去的位址.php")
-                input(
-                  type='text'
-                  name='title'
-                  value='活動標題'
-                  required
-                )
-                input(
-                  type='text'
-                  name='subtitle'
-                  value='副標題'
-                )
-                textarea(
-                  id="textarea"
-                  maxlength='100'
-                  placeholder='內容詳情'
-                  required
-                )
-                botton(type="submit")發佈
       #create
         #userpic
-        #insertbox
-      
-
-        
+        button#insertbox
 
       #board
         #divider
@@ -69,7 +36,7 @@ html
         #postwrapper
           #postype
             #mark
-              img(src="{% static 'file/applyicon.png' %}")
+              p +
             #title
               p ＃揪團 去COSTCO
             #subtitle
@@ -77,12 +44,11 @@ html
             #attachpic
               img(src="{% static 'file/exiticon.png' %}")
               img(src="{% static 'file/exiticon.png' %}")
-            #likebutton
-              img(src="{% static 'file/like-y.png' %}")
-              h 160
-            #comment
-              img(src="{% static 'file/msgicon.png' %}")
-              h 36            
+          #count
+            img#likebutton(src="{% static 'file/like-y.png' %}")
+            h 160  
+            img#comment(src="{% static 'file/msgicon.png' %}")
+            h 36            
 
     #gotop
       p ˄
