--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -27,6 +27,10 @@ body
   background-color: white
   width: 100%
   height: 100%
+
+a
+  text-decoration: none
+  color: black
   
 #profilepanel
   position: absolute
