--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -39,12 +39,10 @@ body
   justify-content: flex-start
   align-items: stretch
   flex-direction: column
-  flex-wrap: wrap
+  flex-wrap: nowrap
   align-content: space-around
-  ovrer-flow: hidden
   
   width: 70%
-  height: auto
   top: 10%
   left: 50%
   bottom: 0%
@@ -74,111 +72,73 @@ body
       background-color: rgba(247, 247, 247, 1)
       cursor: pointer
       
-  #divider
-    display: flex
-    flex-direction: row
-    justify-content: space-between
-    align-items: center
-    margin: 1vw
-    background-color: rgba(255, 219, 208, 1)
-    
-    p
-      margin-right: 0
-      font-size: 1.5vw
-    
-    .line
-      background-color: rgba(255, 219, 208, 1)
-      align: center
-      height: 0.2vw
-      //margin: 0 1vw
-      border: none
-    #line1
-      width: 60%
-    #line2
-      width: 5%
+  
 
   #board
-    display:flex
-    flex-direction: row
+    display: flex
+    flex-direction: column
     justify-content: flex-start
-    align-items: center
+    flex-wrap: nowrap
+    align-content: center
+    align-items: stretch
     background-color: rgba(255, 219, 208, 1)
     width: 100%
-    height: 85%
     
     border-radius: 1.5vw  
     z-index: 0
-
-    #postwrapper
-      margin-left: 5vw
-      margin-top: 3vh
-      z-index: 1
-      height: 15vh
-      width: 30%
-      border-radius: 1.2vw
-      background-color: yellow
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-      cursor: pointer
-
-      #postype
-        height: 80%
-        width: 100%
-        border-radius: 1.2vw
-        background-color: rgba(58, 237, 194, 1)
-        padding-bottom: 20%
-        padding-left: 7%
-        padding-right: 10%
-        z-index: 2
+    #divider
+      display: flex
+      flex-direction: row
+      justify-content: space-between
+      align-items: center
+      margin: 1vw
+      background-color: rgba(255, 219, 208, 1)
+      
+      p
+        margin-right: 0
+        font-size: 1.5vw
+      
+      .line
+        background-color: rgba(255, 219, 208, 1)
+        align: center
+        height: 0.2vw
+        //margin: 0 1vw
+        border: none
+      #line1
+        width: 60%
+      #line2
+        width: 5%
         
-        #mark
-          transform: translate(+50%, +50%)
-          margin-left: 80%
-          margin-top: 1vh
-          margin-bottom: 0.5vh
-          width: 3vw
-          height: 3vw
-          border-radius: 3vw
-          background-color: rgba(255, 134, 96, 1)
-          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
-
-          p
-            font-size: 3vw
-            font-color: rgba(245, 251, 254, 1)
-            position: fixed
-            text-align:center
-            
-          
-          
-        #title
-          font-size: 2vw
-        #subtitle
-          font-size: 1.5vw
-          margin-left: 10%
-          margin-bottom: 1vh
-        #attachpic
-          img
-            width: 30%
-            height: 30%
-
-      #count
+    #eventboard
+      display: flex
+      flex-direction: column
+      flex-wrap: wrap
+      align-content: center
+      justify-content: flex-start
+      align-items: center
+      
+      #eventpost
         display: flex
-        flex-direction: row
-        justify-content: space-evenly
-        padding: 1vw
-
-        #likebutton
-          transform: translate(+50%, -25%)
-          width: 2.5vw
-          height: 2.5vw
-          vertical-align: middle
-        #comment
-          transform: translate(+50%, -25%)
-          width: 2.5vw
-          height: 2.5vw
-          vertical-align: middle
-    
-        
-
+        flex-direction: column
+        flex-wrap: nowrap
+        align-content: center
+        justify-content: flex-start
+        align-items: flex-start
+        background-color: yellow
+        margin: 3vw
+        width: 17vw
+        font-size: 1.4vw
+      
+      #postlikes
+        #likeicon
+          height: 1vw
+          width: auto
+      #postcomments
+        #commenticon
+          height: 1vw
+          width: auto
+          
+      
 #gotop 
   position: fixed
   border-radius: 50px
@@ -609,8 +569,8 @@ body
       height: auto
 
 #filter1
-  display: block
+  display: none
 #eventwindow
   display: none
 #eventcreatewindow
-  display: block
+  display: none
