--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -114,8 +114,9 @@ body
       flex-direction: row
       flex-wrap: wrap
       align-content: center
-      justify-content: flex-start
-      align-items: center
+      justify-content: space-between
+      align-items: flex-start
+      margin: 0 7vw
       
       #eventpost
         display: flex
@@ -124,23 +125,68 @@ body
         align-content: center
         justify-content: flex-start
         align-items: flex-start
-        background-color: yellow
-        margin: 3vw
-        width: 17vw
-        font-size: 1.4vw
-        #postimgs
-          height: 3vw
-          width: 3vw
-          border-radius: 0.5vw
-
-      #postlikes
-        #likeicon
-          height: 1vw
-          width: auto
-      #postcomments
-        #commenticon
-          height: 1vw
-          width: auto
+                
+        width: 15vw
+        background-color: white
+        margin: 0.5vw 0
+        padding: 1vw 1.5vw 0.5vw 1.5vw
+        border-radius: 1.5vw
+        
+        *
+          margin: 0
+        
+        #posttop
+          transform: translate(-1.5vw, -1vw)
+          width: 15vw
+          padding: 1vw 1.5vw 0.5vw 1.5vw
+          border-radius: 1.5vw
+          min-height: 7vw
+          background-color: #FFAD94
+          
+          #postimgs
+            height: 3vw
+            width: 3vw
+            border-radius: 0.5vw
+            border: solid 1px
+            border-color: #828282
+            background-color: #FFDBD0
+            
+          #post_title
+            font-size: 1.5vw
+            font-weight: 600
+          #post_subtitle
+            font-size: 1vw
+          #postcreatdate
+            font-size: 0.8vw
+            color: #777777
+            text-align: right
+          
+            
+        #postbottom
+          display: flex
+          flex-direction: row
+          flex-wrap: nowrap
+          justify-content: center
+          align-items: center
+          width: 100%
+          padding: 0
+          
+          *
+            margin: 0 1vw
+          img
+            margin-right: 0
+            
+          p
+            line-height: 1.5vw
+            
+          #likeicon
+            height: 1.5vw
+            width: auto
+            
+          #commenticon
+            height: 1.5vw
+            width: auto
+          
           
       
 #gotop 
