clear event create input, modify js

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -71,6 +71,7 @@ body
       border-radius: 1.2vw
       background-color: rgba(247, 247, 247, 1)
       cursor: pointer
+      border: none
       
   
 
@@ -117,6 +118,7 @@ body
       justify-content: space-between
       align-items: flex-start
       margin: 0 7vw
+      margin-bottom: 7vw
       
       #eventpost
         display: flex
@@ -126,7 +128,7 @@ body
         justify-content: flex-start
         align-items: flex-start
                 
-        width: 15vw
+        width: 13vw
         background-color: white
         margin: 0.5vw 0
         padding: 1vw 1.5vw 0.5vw 1.5vw
@@ -136,8 +138,8 @@ body
           margin: 0
         
         #posttop
-          transform: translate(-1.5vw, -1vw)
-          width: 15vw
+          transform: translate(-1.55vw, -1.1vw)
+          width: 13.1vw
           padding: 1vw 1.5vw 0.5vw 1.5vw
           border-radius: 1.5vw
           min-height: 7vw
